--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.code{
+    @apply bg-teal-400 p-6 m-6 rounded-md 
+    border-black border-2 shadow-xl  break-words
+     font-mono 
+    ;
+}
+/* text-justify */
